feat: Product support data
- check OpenApi pass
- support front ui
